Fixed logo issue on mobile menu

--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -31,6 +31,8 @@ nav.navbar{
   width: 20%;
   padding-top: 25px;
   display: inline-block !important;
+  z-index: 1;
+  position: relative;
 }
 
 .navbar-toggle {
